syntax = "proto3";

package analytics_app_customer_support.v1;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;

// THQ AHT events schema via Iguazu
message DispatchTxAhtTimerData {
  // unique ID for series of related timing events
  string handle_instance_id = 1;
  // ID for the case
  string case_id = 2;
  // total calculated handle time for the case, ms
  int64 active_time_ms = 3;
  // start time for the series, ms
  int64 original_start_time = 4;
  // start time for the resume or pause event, ms
  int64 start_time = 5; // ms
  // end time for the pause event
  int64 end_time = 6; // ms
  // salesforce user ID
  string sfdc_user_id = 7;
  // Start, Resume, Pause, or Stop type for the event
  string type = 8;
  // possibly nested timers.
  map<string, SubTimerData> subtimers = 9;
  // json blob for flexible metadata
  string metadata = 10;
}

// feedback data for thq kbs
message DispatchThqKbFeedbackSubmitData {
  // rating
  int64 rating = 1;
  // kb article id
  string kb_id = 2;
  // current version for kb article
  int64 kb_published_version = 3;
  // last published at for current kb
  google.protobuf.Timestamp kb_last_published_at = 4;
  // language of current kb
  string kb_langauage = 5;
  // kb title
  string kb_title = 6;
  // case id - optional
  string case_id = 7;
  // feedback text - optional
  string feedback_text = 8;
}

// nested timing data for additional timed params, with arbitrary key
message SubTimerData {
  // deprecated fields
  reserved "subtimers";
  reserved 5;
  // total calculated elapsed time for the timed param
  int64 current_duration_ms = 1;
  // start time for the series, ms
  int64 original_start_time = 2; // ms
  // start time for the resume or pause event, ms
  int64 last_start_time = 3; // ms
  // end time for the pause event
  int64 last_end_time = 4; // ms
  // possibly nested timers
  // [DELETED] map<string, SubTimerData> subtimers = 5;
  // possibly nested timers. Value is JSON blob.
  map<string, string> subtimers_v2 = 6;
}

// data about the page the event was emitted on
message Page {
  // page path
  string path = 1;
  // page referrer
  string referrer = 2;
  // page search params
  string search = 3;
  // page title
  string title = 4;
  // page url
  string url = 5;
}

// dispatch_thq_kb_feedback_submit_event
message DispatchThqKbFeedbackSubmitEvent {
  // event name for iguazu
  string event = 1;
  // page data
  Page page = 2;
  // event properties
  DispatchThqKbFeedbackSubmitData properties = 3;
  // time event was sent
  google.protobuf.Timestamp sent_at = 4;
  // equivalent segment type, such as track
  string type = 5;
  // user ID of the Tx
  string user_id = 6;
  // optional : feedback text for neg feedback
  string feedback_text = 7;
}

// dispatch_tx_aht_timer_event
message DispatchTxAhtTimerEvent {
  // event name for iguazu
  string event = 1;
  // page data
  Page page = 2;
  // event properties
  DispatchTxAhtTimerData properties = 3;
  // time event was sent
  google.protobuf.Timestamp sent_at = 4;
  // equivalent segment type, such as track
  string type = 5;
  // user ID of the Tx
  string user_id = 6;
}

// THQ chat error events schema via Iguazu
message WebChatAxErrorOccuredData {
  // salesforce ID of the Tx
  string user_id = 1;

  // channel url of chat
  string channel_url = 2;

  // error message
  string message = 3;

  // error code
  int64 code = 4;
}

// web_chat_ax_error_occured_event
message WebChatAxErrorOccuredEvent {
  // event name for iguazu
  string event = 1;
  // page data
  Page page = 2;
  // event properties
  WebChatAxErrorOccuredData properties = 3;
  // time event was sent
  google.protobuf.Timestamp sent_at = 4;
  // equivalent segment type, such as track
  string type = 5;
}

// THQ chat send button events schema via Iguazu
message WebChatAxSendButtonClickData {
  // salesforce ID of the Tx
  string user_id = 1;

  // channel url of chat
  string channel_url = 2;
}

// web_chat_ax_send_button_click_event
message WebChatAxSendButtonClickEvent {
  // event name for iguazu
  string event = 1;
  // page data
  Page page = 2;
  // event properties
  WebChatAxSendButtonClickData properties = 3;
  // time event was sent
  google.protobuf.Timestamp sent_at = 4;
  // equivalent segment type, such as track
  string type = 5;
}

// THQ chat end chat events schema via Iguazu
message WebChatAxEndChatButtonClickData {
  // salesforce ID of the Tx
  string user_id = 1;

  // channel url of chat
  string channel_url = 2;
}

// web_chat_ax_end_chat_button_click_event
message WebChatAxEndChatButtonClickEvent {
  // event name for iguazu
  string event = 1;
  // page data
  Page page = 2;
  // event properties
  WebChatAxEndChatButtonClickData properties = 3;
  // time event was sent
  google.protobuf.Timestamp sent_at = 4;
  // equivalent segment type, such as track
  string type = 5;
}

// dispatch_add_top_dasher_event_data
message DispatchAddTopDasherEventData {
  // dasher id
  int64 dasher_id = 1;

  // tx user id
  string user_id = 2;

  // error
  string error = 3;

  // type of event
  string type = 4;

  // date when event was waived
  string waived_on = 5;
}

// dispatch_ratings_adjudication_event_data
message DispatchRatingsAdjudicationEventData {
  // dasher id
  int64 dasher_id = 1;

  // review id
  string consumer_review_uuid = 2;

  // was completion rating waived
  bool waived_completion_rating = 3;

  // was consumer reaview waived
  bool waived_review = 4;

  // date when event was waived
  string waived_on = 5;

  // tx user id
  string user_id = 6;

  // error
  string error = 7;

  // type of event
  string type = 8;

  // delivery id
  string delivery_uuid = 9;
}

// dispatch_ratings_adjudication_click_event
message DispatchRatingsAdjudicationClickEvent {
  // event name for iguazu
  string event = 1;

  // page data
  Page page = 2;

  // event properties
  DispatchRatingsAdjudicationEventData properties = 3;

  // time event was sent
  google.protobuf.Timestamp sent_at = 4;

  // equivalent segment type, such as track
  string type = 5;
}

// dispatch_add_top_dasher_click_event
message DispatchAddTopDasherClickEvent {
  // event name for iguazu
  string event = 1;

  // page data
  Page page = 2;

  // event properties
  DispatchAddTopDasherEventData properties = 3;

  // time event was sent
  google.protobuf.Timestamp sent_at = 4;

  // equivalent segment type, such as track
  string type = 5;
}

// THQ Chat Suggestions log the message sent for iguazu
message THQSuggestionsMessageSentEvent {
  // event name for iguazu
  string event = 1;

  // page data
  Page page = 2;

  // message sent
  string message_sent = 3;

  // suggested message id
  string message_id = 4;

  // suggested message index
  int32 message_index = 5;

  // salesforce ID of the Tx
  string user_id = 6;

  // channel url of chat
  string channel_url = 7;

  // time event was sent
  google.protobuf.Timestamp sent_at = 8;
}

// THQ Chat Suggestions feedback sent
message THQSuggestionsFeedbackSentEvent {
  // event name for iguazu
  string event = 1;

  // page data
  Page page = 2;

  // message sent
  string message_sent = 3;

  // suggested message id
  string message_id = 4;

  // suggested message index
  int32 message_index = 5;

  // suggested message feedback [1,2]
  int32 message_feedback = 6;

  // salesforce ID of the Tx
  string user_id = 7;

  // channel url of chat
  string channel_url = 8;

  // time event was sent
  google.protobuf.Timestamp feedback_submitted_at = 9;
}

// THQ chat suggestions message sent event schema via Iguazu
message WebChatAxTHQSuggestionsMessageSentData {
  // salesforce ID of the Tx
  string user_id = 1;

  // channel url of chat
  string channel_url = 2;
}

// web_chat_ax_thq_suggestions_message_sent_event
message WebChatAxTHQSuggestionsMessageSentEvent {
  // to be deledted, do not reuse.
  reserved 4;
  reserved "message_sent";
  reserved 6;
  reserved "message_index";

  // event name for iguazu
  string event = 1;
  // page data
  Page page = 2;
  // event properties
  WebChatAxTHQSuggestionsMessageSentData properties = 3;
  // id for message sent by agent
  string message_id = 5;
  // time event was sent
  google.protobuf.Timestamp sent_at = 7;
  // equivalent segment type, such as track
  string type = 8;
  // suggested message id
  string suggestion_id = 9;
  // suggested message index
  int32 suggestion_index = 10;
}

// THQ chat suggestions feedback sent event schema via Iguazu
message WebChatAxTHQSuggestionsFeedbackSentData {
  // salesforce ID of the Tx
  string user_id = 1;

  // channel url of chat
  string channel_url = 2;
}

// web_chat_ax_thq_suggestions_feedback_sent_event
message WebChatAxTHQSuggestionsFeedbackSentEvent {
  // to be deleted, do not reuse.
  reserved 4;
  reserved "message_id";
  reserved 5;
  reserved "message_index";
  reserved 6;
  reserved "message_feedback";
  reserved 7;
  reserved "feedback_submitted_at";

  // event name for iguazu
  string event = 1;
  // page data
  Page page = 2;
  // event properties
  WebChatAxTHQSuggestionsFeedbackSentData properties = 3;
  // equivalent segment type, such as track
  string type = 8;
  // suggested message id
  string suggestion_id = 9;
  // suggested message index
  int32 suggestion_index = 10;
  // suggested message feedback [1,2]
  int32 suggestion_feedback = 11;
  // time event was sent
  google.protobuf.Timestamp sent_at = 12;
}

// THQ generic event
// https://docs.google.com/document/d/1xMchqbPWDkfHS5WxUsyVLiAboz0gxX_Cze_zq5NR9Qc
message ThqActionEvent {
  // event name for iguazu
  string event = 1;
  // page data
  Page page = 2;
  // module name
  string module = 3;
  // time event was sent
  google.protobuf.Timestamp sent_at = 4;
  // Label for action taken during the event (category)
  string action = 5;
  // unique identifier such as case id
  string identifier = 6;
  // user ID of the Tx
  string user_id = 7;
  // An identifier of what element was interacted with
  string element_identifier = 8;
  // Where applicable this would be the value of what was clicked
  string element_value = 9;
  // Json blob that reflects any details specific to this event
  string metadata = 10;
  // equivalent segment type, such as track
  string type = 11;
}
