syntax = "proto3";
package doordash.dvcs.v2;

import "dynamic-values-config-service.v2/common.proto";
import "dynamic-values-config-service.v2/tokens_models.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "com.doordash.dvcs.v2";

// Request proto for `GetToken`
message GetTokenRequest {
  // Token ID
  string id = 1;
}

// Response proto for `GetToken`
message GetTokenResponse {
  // Token details
  Token token = 1;
}

// Request proto for `ListTokens`
message ListTokensRequest {
  // Filter field
  enum Field {
    // Field is unspecified
    FIELD_UNSPECIFIED = 0;

    // Filter by ID
    FIELD_ID = 1;
  }

  // Filter values
  message Filter {
    // Filter field
    Field field = 1;

    // Filter value
    string value = 2;
  }

  // List of filters
  repeated Filter filters = 1;

  // Number of items to return per-page
  google.protobuf.Int32Value page_size = 2;

  // Continue from this page
  google.protobuf.StringValue page_token = 3;
}

// Response proto for `ListTokens`
message ListTokensResponse {
  // List of tokens
  repeated Token tokens = 1;

  // Previous page of results
  google.protobuf.StringValue prev_page_token = 2;

  // Next page of results
  google.protobuf.StringValue next_page_token = 3;
}

// Request proto for `CreateToken`
message CreateTokenRequest {
  // Token details
  Token token = 1;
}

// Response proto for `CreateToken`
message CreateTokenResponse {
  // Token details
  Token token = 1;
}

// Request proto for `UpdateToken`
message UpdateTokenRequest {
  // Token details
  Token token = 1;
}

// Response proto for `UpdateToken`
message UpdateTokenResponse {
  // Token details
  Token token = 1;
}

// Request proto for `DeleteToken`
message DeleteTokenRequest {
  // Token ID
  string id = 1;
}

// Response proto for `DeleteToken`
message DeleteTokenResponse {
  // Token details
  Token token = 1;
}
